- Ctrl+Shift+E to send a broadcast message
- Ctrl+Alt+B to kick and ban
- Ctrl+Shift+Alt+M to mute/unmute media files of an user
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login
Android client
- User volume levels and subscriptions are restored on login when using BearWare.dk Web Login

Version 5.6, 2020/08/04
Accessible Windows client
- Removed duplex mode for sound devices
- Removed Windows Sound system
- Removed Advanced page from Preferences
- Default sound system, Windows Audio Session, now uses Windows' own echo cancellor, AGC and noise suppression
- User accounts are now sorted alphabetically
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Blank nicknames are set to NoName followed by user ID
- More items are now translatable.
- French, Turkish, German and Chinese languages updated.
- All areas of main window are now labelled
- Slider controls now use down arrow to decrease volume and up arrow to increase volume
- TTS announces volume changes when using shortcut keys Ctrl+Alt+Left/Right and Ctrl+Shift+Left/Right
- When in main channel the application title is now server name
- Blank characters are automatically removed from username and channel name
- Who has removed a file is now announce
Default Qt client
- Removed duplex mode for sound devices
- Sound system Windows Audio Session now uses Windows' own echo cancellor, AGC and noise suppression
- Text message log files are stored with .clog and .ulog extension for channel and user log respectively
- Press tab changes focus in text message dialog
- More items are translatable
- More controls are labelled with accessibility hints
- Blank nicknames are set to NoName followed by user ID
- When in main channel the application title is now server name
- Blank characters are automatically removed from username and channel name
- New events on chat history for file addition and deletion
Android client