@@ -88,6 +88,12 @@ class ChannelListViewController :
         
     }
     
+    deinit {
+        for (_, user) in users {
+            syncToUserCache(user: user)
+        }
+    }
+    
     override func didReceiveMemoryWarning() {
         super.didReceiveMemoryWarning()
         // Dispose of any resources that can be recreated.
